--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-fastapi
-uvicorn
-pymongo
-feedparser
-requests
-python-dotenv
-openai
-google-generativeai
+fastapi==0.122.0
+uvicorn==0.18.3
+pymongo==4.15.4
+feedparser==6.0.12
+requests==2.32.5
+python-dotenv==1.2.1
