--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-fastapi
-uvicorn[standard]
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
 
-pymongo
-python-dotenv
+pymongo==4.8.0
+feedparser==6.0.11
+httpx==0.27.2
 
-feedparser
-httpx
+python-dateutil==2.9.0.post0
 
-google-generativeai
-
-pydantic
-pydantic-settings
+# Optional but useful
+python-dotenv==1.0.1
