--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-
+Flask==2.3.3
 pymongo==4.8.0
-feedparser==6.0.11
-httpx==0.27.2
-
-python-dateutil==2.9.0.post0
-
-# Optional but useful
 python-dotenv==1.0.1
-pydantic-settings
-groq
-jinja2
-motor
+feedparser==6.0.11
+requests==2.31.0
+flask-cors==3.0.10
+httpx==0.27.2
