--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-Flask==2.3.3
-Flask-Cors==3.0.10
-pymongo==4.9.1
-python-dotenv==1.0.1
-feedparser==6.0.11
-requests==2.31.0
-jinja2==3.1.6
+fastapi==0.115.0
+uvicorn==0.30.6
 gunicorn==21.2.0
+motor==3.7.1
+pymongo==4.9.0
+jinja2==3.1.6
+feedparser==6.0.11
 httpx==0.27.2
+python-dotenv==1.0.1
+python-dateutil==2.9.0.post0
+groq==0.37.0
+dnspython==2.8.0
+pydantic==2.12.5
