--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,4 @@ feedparser==6.0.11
 httpx==0.27.2
 python-dotenv==1.0.1
 python-dateutil==2.9.0.post0
-groq==0.37.0
-dnspython==2.8.0
-pydantic==2.12.5
+# (groq, dnspython, pydantic etc add only if you need them)
