--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-
-fastapi==0.115.0
+Fastapi==0.115.0
 uvicorn[standard]==0.30.6
 gunicorn==21.2.0
 motor==3.7.1
@@ -9,5 +8,4 @@ feedparser==6.0.11
 httpx==0.27.2
 python-dotenv==1.0.1
 python-dateutil==2.9.0.post0
-
-google-generativeai
+google-genai
